# ScyPuppy

./: ARCHITECTURE.md  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  prints.md  vite.config.ts
.github/: dependabot.yml
.github/workflows/: automatic-beta-release.yml  windows-ci.yml  windows-release.yml
docs/: windows-build.md
docs/adr/: 0001-windows-multi-format-clipboard.md
scripts/: build-windows.ps1  file-sha256.ps1  prepare-beta-release.ps1  release-metadata.ps1  set-release-version.ps1
src/: App.css  App.tsx  LiteApp.css  LiteApp.test.ts  LiteApp.tsx  appMessages.test.ts  appMessages.ts  i18n.test.ts  i18n.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  icon-manifest.json  tauri.conf.json
src-tauri/capabilities/: default.json  magic-search.json  paste.json  quick-context.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  app_error.rs  clipboard_monitor.rs  crypto.rs  lib.rs  local_search.rs  main.rs
src-tauri/src/clipboard/: fallback.rs  mod.rs  model.rs  service.rs  windows.rs
src-tauri/windows/: installer-hooks.nsh
src-tauri/windows/languages/: English.nsh  PortugueseBR.nsh
src/api/: tauri.ts
src/components/: BrandMark.css  BrandMark.tsx  MarkdownDocument.css  MarkdownDocument.tsx  OnboardingTutorial.test.tsx  OnboardingTutorial.tsx  SettingsControls.test.tsx  SettingsControls.tsx
src/config/: defaultSettings.test.ts  defaultSettings.ts
src/dev/: docsPreview.ts
src/features/lite/: AddItemsToContextDialog.tsx  CaptureDetailsDialog.tsx  DataCleanupDialog.test.tsx  DataCleanupDialog.tsx  LiteDocumentsWorkspace.tsx  LiteEmpty.tsx  LiteIcon.tsx  LiteMagicPalette.test.tsx  LiteMagicPalette.tsx  LiteMainApp.tsx  LiteSettingsDialog.tsx  SmartContextDialog.test.tsx  SmartContextDialog.tsx  formatters.test.ts  formatters.ts
src/features/updates/: useAppUpdater.ts  (+2 more)
src/hooks/: useAutoCloseTimer.test.tsx  useAutoCloseTimer.ts  useLiteWorkspace.ts  useSettingsCoordinator.test.tsx  useSettingsCoordinator.ts  useTauriEvent.ts  useWindowTheme.test.tsx  useWindowTheme.ts
src/styles/: tokens.css
src/test/: fixtures.ts
