[package]
name = "scrypuppy"
version = "1.0.0-beta.11"
description = "Context-aware clipboard history for desktop"
authors = ["ScryPuppy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clipscry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled-sqlcipher-vendored-openssl"] }
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
thiserror = "2.0.18"
tauri-plugin-global-shortcut = "2.3.2"
arboard = "3.6.1"
enigo = "0.2.1"
active-win-pos-rs = "0.11.0"
xcap = "0.9.6"
tauri-plugin-single-instance = "2.4.2"
image = { version = "0.25.10", default-features = false, features = ["png"] }
regex = "1.13.0"
sha2 = "0.10"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
aes-gcm = "0.10.3"
keyring = "4.1.4"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Foundation", "Graphics_Imaging", "Media_Ocr", "Storage", "Storage_Streams", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_Ole", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
windows-future = "0.2.1"
winreg = "0.55.0"
